Experiment with bootstrap html.

--- a/data/index.html
+++ b/data/index.html
@@ -1,11 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>Nospig Weather Station</title>
@@ -15,7 +13,74 @@
   </head>
 
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"> 
+        <span class="navbar-brand">
+            Weather Station
+        </span>
+    </nav>       
+
+    <div class="container-fluid" style="margin-top:80px">
+        <h3>Dashboard</h3>
+        <table class="table">
+            <thead class="thead-light">
+                <tr>
+                    <th>Sensor reading</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <div class="row p-2 no-gutters">
+                            <div class="col-2 bg-warning">
+                                <div class="d-flex align-items-center justify-content-center h-100">
+                                    <img style="width:20px; height: 47px" src="img/temperature-clipart-1.png" >
+                                </div>
+                            </div>
+                            <div class="col bg-secondary text-white">
+                                    <div class="d-flex flex-column">
+                                        <div class="p-2 bg-primary">Flex item 1</div>
+                                        <div class="p-2 bg-secondary">Flex item 2</div>                                                    
+                                    </div>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="row p-2 no-gutters">
+                            <div class="col-2 bg-warning">
+                                <div class="d-flex align-items-center justify-content-center h-100">
+                                    <img style="width:20px; height: 47px" src="img/temperature-clipart-1.png" >
+                                </div>
+                            </div>
+                            <div class="col bg-secondary text-white">
+                                    <div class="d-flex flex-column">
+                                        <div class="p-2 bg-primary">Flex item 1</div>
+                                        <div class="p-2 bg-secondary">Flex item 2</div>                                                    
+                                    </div>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="row p-2 no-gutters">
+                            <div class="col-2 bg-warning">
+                                <div class="d-flex align-items-center justify-content-center h-100">
+                                    <img style="width:20px; height: 47px" src="img/temperature-clipart-1.png" >
+                                </div>
+                            </div>
+                            <div class="col bg-secondary text-white">
+                                    <div class="d-flex flex-column">
+                                        <div class="p-2 bg-primary">Flex item 1</div>
+                                        <div class="p-2 bg-secondary">Flex item 2</div>                                                    
+                                    </div>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
