--- a/data/index.html
+++ b/data/index.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>Nospig Weather Station</title>
-
-    <script type="text/javascript" src="js/station.js">               
-    </script>
   </head>
 
   <body>
@@ -24,7 +21,7 @@
         <table class="table">
             <thead class="thead-light">
                 <tr>
-                    <th>Sensor reading</th>
+                    <th>Sensor readings</th>
                     <th></th>
                     <th></th>
                 </tr>
@@ -33,45 +30,45 @@
                 <tr>
                     <td>
                         <div class="row p-2 no-gutters">
-                            <div class="col-2 bg-warning">
+                            <div class="col-2 bg-secondary">
                                 <div class="d-flex align-items-center justify-content-center h-100">
                                     <img style="width:20px; height: 47px" src="img/temperature-clipart-1.png" >
                                 </div>
                             </div>
                             <div class="col bg-secondary text-white">
                                     <div class="d-flex flex-column">
-                                        <div class="p-2 bg-primary">Flex item 1</div>
-                                        <div class="p-2 bg-secondary">Flex item 2</div>                                                    
+                                        <div class="p-2">Temperature</div>
+                                        <div class="p-2" id="sensorTemp">Waiting...</div>                                                    
                                     </div>
                             </div>
                         </div>
                     </td>
                     <td>
                         <div class="row p-2 no-gutters">
-                            <div class="col-2 bg-warning">
+                            <div class="col-2 bg-secondary">
                                 <div class="d-flex align-items-center justify-content-center h-100">
                                     <img style="width:20px; height: 47px" src="img/temperature-clipart-1.png" >
                                 </div>
                             </div>
                             <div class="col bg-secondary text-white">
                                     <div class="d-flex flex-column">
-                                        <div class="p-2 bg-primary">Flex item 1</div>
-                                        <div class="p-2 bg-secondary">Flex item 2</div>                                                    
+                                        <div class="p-2">Humidty</div>
+                                        <div class="p-2" id="sensorHumidity">Waiting...</div>                                                    
                                     </div>
                             </div>
                         </div>
                     </td>
                     <td>
                         <div class="row p-2 no-gutters">
-                            <div class="col-2 bg-warning">
+                            <div class="col-2 bg-secondary">
                                 <div class="d-flex align-items-center justify-content-center h-100">
                                     <img style="width:20px; height: 47px" src="img/temperature-clipart-1.png" >
                                 </div>
                             </div>
                             <div class="col bg-secondary text-white">
                                     <div class="d-flex flex-column">
-                                        <div class="p-2 bg-primary">Flex item 1</div>
-                                        <div class="p-2 bg-secondary">Flex item 2</div>                                                    
+                                        <div class="p-2">Pressure</div>
+                                        <div class="p-2" id="sensorPressure">Waiting...</div>                                                    
                                     </div>
                             </div>
                         </div>
@@ -87,5 +84,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="js/station.js">               
+    </script>
+
   </body>
 </html>
