Parse json sensor data, update icons.

--- a/data/index.html
+++ b/data/index.html
@@ -32,7 +32,7 @@
                         <div class="row p-2 no-gutters">
                             <div class="col-2 bg-secondary">
                                 <div class="d-flex align-items-center justify-content-center h-100">
-                                    <img style="width:20px; height: 47px" src="img/temperature-clipart-1.png" >
+                                    <img style="width:64px; height:64px" src="img/thermometer.png" >
                                 </div>
                             </div>
                             <div class="col bg-secondary text-white">
@@ -47,7 +47,7 @@
                         <div class="row p-2 no-gutters">
                             <div class="col-2 bg-secondary">
                                 <div class="d-flex align-items-center justify-content-center h-100">
-                                    <img style="width:20px; height: 47px" src="img/temperature-clipart-1.png" >
+                                    <img style="width:64px; height:64px" src="img/humidity.png" >
                                 </div>
                             </div>
                             <div class="col bg-secondary text-white">
@@ -62,7 +62,7 @@
                         <div class="row p-2 no-gutters">
                             <div class="col-2 bg-secondary">
                                 <div class="d-flex align-items-center justify-content-center h-100">
-                                    <img style="width:20px; height: 47px" src="img/temperature-clipart-1.png" >
+                                    <img style="width:64px; height:64px" src="img/gauge.png" >
                                 </div>
                             </div>
                             <div class="col bg-secondary text-white">
