Show connected state on dashboard.

--- a/data/index.html
+++ b/data/index.html
@@ -18,7 +18,7 @@
     </nav>       
 
     <div class="container-fluid" style="margin-top:80px">
-        <h3>Dashboard</h3>
+        <h3 id="dashboardTitle">Dashboard - not connected</h3>
         <table class="table" style="background-color: white">
             <thead class="thead-light">
                 <tr>
