Add some info for current weather on server page.

--- a/data/index.html
+++ b/data/index.html
@@ -87,11 +87,8 @@
             <tbody>
                 <tr>
                     <td>
-                        <ul class="list-group">
-                            <li class="list-group-item">First item</li>
-                            <li class="list-group-item">Second item</li>
-                            <li class="list-group-item">Third item</li>
-                          </ul> 
+                        <ul id="internetWeatherList" class="list-group">                            
+                        </ul> 
                     </td>                                      
                 </tr>
             </tbody>
