Serve a settings form that can use templates.

--- a/data/index.html
+++ b/data/index.html
@@ -12,9 +12,12 @@
 
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"> 
-        <span class="navbar-brand">
-            Weather Station
-        </span>
+        <a class="navbar-brand" href="index.html">Weather Station</a>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="settings.html">Settings</a>
+            </li>
+        </ul>
     </nav>       
 
     <div class="container-fluid" style="margin-top:80px">
