--- a/data/settings.html
+++ b/data/settings.html
@@ -22,7 +22,31 @@
 
     <div class="container-fluid" style="margin-top:80px">
         <h3>Settings</h3>
-        %SETTINGS_FORM%
+        <div class="table-responsive-md">
+            <table class="table" style="background-color: white">
+                <thead class="thead-light">
+                    <tr>
+                        <th>Weather settings</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <form action="/updateWeatherSettings.html">
+                                <div class="form-group">
+                                    <label for="locationID">OpenWeather location ID:</label>
+                                    <input type="text" class="form-control" id="locationID" value="%WEATHERLOCATIONKEY%" placeholder="OpenWeather location ID" name="openWeatherLocation">
+                                </div>           
+                                <div class="form-group">
+                                        <label for="weatherApiKey">OpenWeather Api Key:</label>
+                                        <input type="text" class="form-control" id="weatherApiKey" value="%WEATHERAPIKEY%" placeholder="OpenWeather API Key" name="openWeatherApiKey">
+                                </div>                                               
+                                <button type="submit" class="btn btn-primary">Save</button>
+                            </form>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
     </div>
 
     <!-- Optional JavaScript -->
