--- a/data/settings.html
+++ b/data/settings.html
@@ -23,6 +23,25 @@
     <div class="container-fluid" style="margin-top:80px">
         <h3>Settings</h3>
         <div class="table-responsive-md">
+                <table class="table" style="background-color: white">
+                    <thead class="thead-light">
+                        <tr>
+                            <th>Display settings</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <form action="/updateDisplaySettings.html">
+                                            
+                                    <button type="submit" class="btn btn-primary">Save</button>
+                                </form>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="table-responsive-md">
             <table class="table" style="background-color: white">
                 <thead class="thead-light">
                     <tr>
@@ -47,6 +66,33 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
+        <div class="table-responsive-md">
+                <table class="table" style="background-color: white">
+                    <thead class="thead-light">
+                        <tr>
+                            <th>ThingSpeak settings</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <form action="/updateThingSpeak.html">
+                                    <div class="form-group">
+                                        <label for="channelID">ThingSpeak channel ID:</label>
+                                        <input type="text" class="form-control" id="channelID" value="%THINGSPEAKCHANNELKEY%" placeholder="ThingSpeak channel ID" name="thingSpeakChannel">
+                                    </div>           
+                                    <div class="form-group">
+                                            <label for="thingSpeakApi">ThingSpeak Api Key:</label>
+                                            <input type="text" class="form-control" id="thingSpeakApiKey" value="%THINGSPEAKAPIKEY%" placeholder="ThingSpeak API Key" name="thingSpeakApiKey">
+                                    </div>                                               
+                                    <button type="submit" class="btn btn-primary">Save</button>
+                                </form>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
     </div>
 
     <!-- Optional JavaScript -->
