--- a/data/settings.html
+++ b/data/settings.html
@@ -21,19 +21,33 @@
     </nav>       
 
     <div class="container-fluid" style="margin-top:80px">
-        <h3>Settings</h3>
+        <h3>Setting - update one section at a time</h3>
         <div class="table-responsive-md">
                 <table class="table" style="background-color: white">
                     <thead class="thead-light">
                         <tr>
-                            <th>Display settings</th>
+                            <th>Display</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>
                                 <form action="/updateDisplaySettings.html">
-                                            
+                                    <div class="form-check">
+                                        <label class="form-check-label" for="display1">
+                                          <input type="radio" class="form-check-input" id="display1" name="optdisplay" value="display1" %DISPLAY1CHECKED%>Mode 1 - summary
+                                        </label>
+                                      </div>
+                                      <div class="form-check">
+                                        <label class="form-check-label" for="display2">
+                                          <input type="radio" class="form-check-input" id="display2" name="optdisplay" value="display2" %DISPLAY2CHECKED%>Mode 2 - 5 day forecast
+                                        </label>
+                                      </div>
+                                      <div class="form-check">
+                                        <label class="form-check-label" for="display3">
+                                          <input type="radio" class="form-check-input" id="display3" name="optdisplay" value="display3" %DISPLAY3CHECKED%>Mode 3 - detailed current
+                                        </label>
+                                      </div>
                                     <button type="submit" class="btn btn-primary">Save</button>
                                 </form>
                             </td>
@@ -45,7 +59,7 @@
             <table class="table" style="background-color: white">
                 <thead class="thead-light">
                     <tr>
-                        <th>Weather settings</th>
+                        <th>Weather</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -71,7 +85,7 @@
                 <table class="table" style="background-color: white">
                     <thead class="thead-light">
                         <tr>
-                            <th>ThingSpeak settings</th>
+                            <th>ThingSpeak</th>
                         </tr>
                     </thead>
                     <tbody>
