Start with blank settings. Don't make API calls until keys set. Error checking still TODO.

--- a/data/settings.html
+++ b/data/settings.html
@@ -21,7 +21,7 @@
     </nav>       
 
     <div class="container-fluid" style="margin-top:80px">
-        <h3>Setting - update one section at a time</h3>
+        <h3>Settings - update one section at a time. Allow up to 10 seconds for display refresh.</h3>
         <div class="table-responsive-md">
                 <table class="table" style="background-color: white">
                     <thead class="thead-light">
