--- a/data/settings.html
+++ b/data/settings.html
@@ -1,61 +1,66 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/station.css">
 
     <title>Nospig Weather Station</title>
-  </head>
+</head>
 
-  <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"> 
+<body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <a class="navbar-brand" href="index.html">Weather Station</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="settings.html">Settings</a>
+                <a class="nav-link" href="settings.html">Settings</a>
             </li>
         </ul>
-    </nav>       
+    </nav>
 
     <div class="container-fluid" style="margin-top:80px">
         <h3>Settings - update one section at a time. Allow up to 10 seconds for display refresh.</h3>
         <div class="table-responsive-md">
-                <table class="table" style="background-color: white">
-                    <thead class="thead-light">
-                        <tr>
-                            <th>Display</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <form action="/updateDisplaySettings.html">
-                                    <div class="form-check">
-                                        <label class="form-check-label" for="display1">
-                                          <input type="radio" class="form-check-input" id="display1" name="optdisplay" value="display1" %DISPLAY1CHECKED%>Mode 1 - summary
-                                        </label>
-                                      </div>
-                                      <div class="form-check">
-                                        <label class="form-check-label" for="display2">
-                                          <input type="radio" class="form-check-input" id="display2" name="optdisplay" value="display2" %DISPLAY2CHECKED%>Mode 2 - 5 day forecast
-                                        </label>
-                                      </div>
-                                      <div class="form-check">
-                                        <label class="form-check-label" for="display3">
-                                          <input type="radio" class="form-check-input" id="display3" name="optdisplay" value="display3" %DISPLAY3CHECKED%>Mode 3 - detailed current
-                                        </label>
-                                      </div>
-                                    <button type="submit" class="btn btn-primary">Save</button>
-                                </form>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="table-responsive-md">
+            <table class="table" style="background-color: white">
+                <thead class="thead-light">
+                    <tr>
+                        <th>Display</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <form action="/updateDisplaySettings.html">
+                                <div class="form-check">
+                                    <label class="form-check-label" for="display1">
+                                        <input type="radio" class="form-check-input" id="display1" name="optdisplay"
+                                            value="display1" %DISPLAY1CHECKED%>Mode 1 - summary
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <label class="form-check-label" for="display2">
+                                        <input type="radio" class="form-check-input" id="display2" name="optdisplay"
+                                            value="display2" %DISPLAY2CHECKED%>Mode 2 - 5 day forecast
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <label class="form-check-label" for="display3">
+                                        <input type="radio" class="form-check-input" id="display3" name="optdisplay"
+                                            value="display3" %DISPLAY3CHECKED%>Mode 3 - detailed current
+                                    </label>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Save</button>
+                            </form>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="table-responsive-md">
             <table class="table" style="background-color: white">
                 <thead class="thead-light">
                     <tr>
@@ -68,12 +73,14 @@
                             <form action="/updateWeatherSettings.html">
                                 <div class="form-group">
                                     <label for="locationID">OpenWeather location ID:</label>
-                                    <input type="text" class="form-control" id="locationID" value="%WEATHERLOCATIONKEY%" placeholder="OpenWeather location ID" name="openWeatherLocation">
-                                </div>           
+                                    <input type="text" class="form-control" id="locationID" value="%WEATHERLOCATIONKEY%"
+                                        placeholder="OpenWeather location ID" name="openWeatherLocation">
+                                </div>
                                 <div class="form-group">
-                                        <label for="weatherApiKey">OpenWeather Api Key:</label>
-                                        <input type="text" class="form-control" id="weatherApiKey" value="%WEATHERAPIKEY%" placeholder="OpenWeather API Key" name="openWeatherApiKey">
-                                </div>                                               
+                                    <label for="weatherApiKey">OpenWeather Api Key:</label>
+                                    <input type="text" class="form-control" id="weatherApiKey" value="%WEATHERAPIKEY%"
+                                        placeholder="OpenWeather API Key" name="openWeatherApiKey">
+                                </div>
                                 <button type="submit" class="btn btn-primary">Save</button>
                             </form>
                         </td>
@@ -82,39 +89,72 @@
             </table>
         </div>
         <div class="table-responsive-md">
-                <table class="table" style="background-color: white">
-                    <thead class="thead-light">
-                        <tr>
-                            <th>ThingSpeak</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <form action="/updateThingSpeak.html">
-                                    <div class="form-group">
-                                        <label for="channelID">ThingSpeak channel ID:</label>
-                                        <input type="text" class="form-control" id="channelID" value="%THINGSPEAKCHANNELKEY%" placeholder="ThingSpeak channel ID" name="thingSpeakChannel">
-                                    </div>           
-                                    <div class="form-group">
-                                            <label for="thingSpeakApi">ThingSpeak Api Key:</label>
-                                            <input type="text" class="form-control" id="thingSpeakApiKey" value="%THINGSPEAKAPIKEY%" placeholder="ThingSpeak API Key" name="thingSpeakApiKey">
-                                    </div>                                               
-                                    <button type="submit" class="btn btn-primary">Save</button>
-                                </form>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+            <table class="table" style="background-color: white">
+                <thead class="thead-light">
+                    <tr>
+                        <th>ThingSpeak</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <form action="/updateThingSpeak.html">
+                                <div class="form-group">
+                                    <label for="channelID">ThingSpeak channel ID:</label>
+                                    <input type="text" class="form-control" id="channelID"
+                                        value="%THINGSPEAKCHANNELKEY%" placeholder="ThingSpeak channel ID"
+                                        name="thingSpeakChannel">
+                                </div>
+                                <div class="form-group">
+                                    <label for="thingSpeakApi">ThingSpeak Api Key:</label>
+                                    <input type="text" class="form-control" id="thingSpeakApiKey"
+                                        value="%THINGSPEAKAPIKEY%" placeholder="ThingSpeak API Key"
+                                        name="thingSpeakApiKey">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Save</button>
+                            </form>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="table-responsive-md">
+            <table class="table" style="background-color: white">
+                <thead class="thead-light">
+                    <tr>
+                        <th>General</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <a class="btn btn-warning confirmResetSettings">Reset settings</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a class="btn btn-warning confirmForgetWifi">Forget Wifi</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <!-- Confirm Modal Js -->
+    <script src="js/jquery.confirmModal.min.js"></script>
+    <script src="js/settings.js"></script>
+</body>
 
-  </body>
 </html>
