Show weather forecast on web page.

--- a/data/index.html
+++ b/data/index.html
@@ -92,13 +92,31 @@
             <tbody>
                 <tr>
                     <td>
-                        <ul id="internetWeatherList" class="list-group">                            
+                        <ul id="internetWeatherList" class="list-group">     
+                            <li class="list-group-item">Waiting...</li>                      
                         </ul> 
                     </td>                                      
                 </tr>
             </tbody>
         </table>
-        
+
+        <table class="table" style="background-color: white">
+                <thead class="thead-light">
+                    <tr>
+                        <th>Internet weather forecast</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <ul id="internetForecastList" class="list-group">     
+                                <li class="list-group-item">Waiting...</li>                      
+                            </ul> 
+                        </td>                                      
+                    </tr>
+                </tbody>
+            </table>
+    
     </div>
 
     <!-- Optional JavaScript -->
