Add screen grab functions. Works with the processing sketch included in the TFT library.

--- a/data/index.html
+++ b/data/index.html
@@ -17,7 +17,10 @@
             <li class="nav-item">
               <a class="nav-link" href="settings.html">Settings</a>
             </li>
-        </ul>
+            <li class="nav-item">
+                <a class="nav-link" href="screenGrab.html">Screengrab</a>
+              </li>
+          </ul>
     </nav>       
 
     <div class="container-fluid" style="margin-top:80px">
