--- a/data/settings.html
+++ b/data/settings.html
@@ -19,6 +19,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="settings.html">Settings</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="screenGrab.html">Screengrab</a>
+              </li>
         </ul>
     </nav>
 
