--- a/data/index.html
+++ b/data/index.html
@@ -19,7 +19,8 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="screenGrab.html">Screengrab</a>
-              </li>
+            </li>
+            %THINGSPEAKLINK%
           </ul>
     </nav>       
 
