--- a/data/index.html
+++ b/data/index.html
@@ -7,22 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/station.css">
 
-    <title>Nospig Weather Station</title>
+    <title>Weather Station</title>
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"> 
-        <a class="navbar-brand" href="index.html">Weather Station</a>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="settings.html">Settings</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="screenGrab.html">Screengrab</a>
-            </li>
-            %THINGSPEAKLINK%
-          </ul>
-    </nav>       
+    %NAVBAR%
 
     <div class="container-fluid" style="margin-top:80px">
         <h3 id="dashboardTitle">Dashboard - not connected</h3>
