--- a/data/settings.html
+++ b/data/settings.html
@@ -9,24 +9,14 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/station.css">
 
-    <title>Nospig Weather Station</title>
+    <title>Weather Station</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-        <a class="navbar-brand" href="index.html">Weather Station</a>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="settings.html">Settings</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="screenGrab.html">Screengrab</a>
-              </li>
-        </ul>
-    </nav>
+    %NAVBAR%
 
     <div class="container-fluid" style="margin-top:80px">
-        <h3>Settings - update one section at a time. Allow up to 10 seconds for display refresh.</h3>
+        <h3>Update one section at a time. Allow up to 10 seconds for display refresh.</h3>
         <div class="table-responsive-md">
             <table class="table" style="background-color: white">
                 <thead class="thead-light">
@@ -103,64 +93,6 @@
             </table>
         </div>
 
-        <div class="table-responsive-md">
-            <table class="table" style="background-color: white">
-                <thead class="thead-light">
-                    <tr>
-                        <th>Weather</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>
-                            <form action="/updateWeatherSettings.html">
-                                <div class="form-group">
-                                    <label for="locationID">OpenWeather location ID:</label>
-                                    <input type="text" class="form-control" id="locationID" value="%WEATHERLOCATIONKEY%"
-                                        placeholder="OpenWeather location ID" name="openWeatherLocation">
-                                </div>
-                                <div class="form-group">
-                                    <label for="weatherApiKey">OpenWeather Api Key:</label>
-                                    <input type="text" class="form-control" id="weatherApiKey" value="%WEATHERAPIKEY%"
-                                        placeholder="OpenWeather API Key" name="openWeatherApiKey">
-                                </div>
-                                <button type="submit" class="btn btn-primary">Save</button>
-                            </form>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="table-responsive-md">
-            <table class="table" style="background-color: white">
-                <thead class="thead-light">
-                    <tr>
-                        <th>ThingSpeak</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>
-                            <form action="/updateThingSpeak.html">
-                                <div class="form-group">
-                                    <label for="channelID">ThingSpeak channel ID:</label>
-                                    <input type="text" class="form-control" id="channelID"
-                                        value="%THINGSPEAKCHANNELKEY%" placeholder="ThingSpeak channel ID"
-                                        name="thingSpeakChannel">
-                                </div>
-                                <div class="form-group">
-                                    <label for="thingSpeakApi">ThingSpeak Api Key:</label>
-                                    <input type="text" class="form-control" id="thingSpeakApiKey"
-                                        value="%THINGSPEAKAPIKEY%" placeholder="ThingSpeak API Key"
-                                        name="thingSpeakApiKey">
-                                </div>
-                                <button type="submit" class="btn btn-primary">Save</button>
-                            </form>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
         <div class="table-responsive-md">
             <table class="table" style="background-color: white">
                 <thead class="thead-light">
