--- a/data/thingSpeakSettings.html
+++ b/data/thingSpeakSettings.html
@@ -16,18 +16,38 @@
     %NAVBAR%
 
     <div class="container-fluid" style="margin-top:80px">
-        <h3>Screengrab - Allow up to 10 seconds for request to be made.</h3>        
+        <h3>Settings for ThingSpeak reporting</h3>
+        
         <div class="table-responsive-md">
             <table class="table" style="background-color: white">
                 <thead class="thead-light">
                     <tr>
-                        <th>Take grab</th>
+                        <th>ThingSpeak</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>
-                            <a class="btn btn-primary" href="/takeScreenGrab.html">Grab</a>
+                            <form action="/updateThingSpeak.html">
+                                <div class="form-check form-group">
+                                    <label class="form-check-label" for="check1">
+                                        <input type="checkbox" class="form-check-input" id="thingSpeakEnabled" name="thingSpeakEnabled" value="Enabled" %THINGSPEAKENABLED%>Enabled
+                                    </label>
+                                </div>
+                                <div class="form-group">
+                                    <label for="channelID">ThingSpeak channel ID:</label>
+                                    <input type="text" class="form-control" id="channelID"
+                                        value="%THINGSPEAKCHANNELKEY%" placeholder="ThingSpeak channel ID"
+                                        name="thingSpeakChannel">
+                                </div>
+                                <div class="form-group">
+                                    <label for="thingSpeakApi">ThingSpeak Api Key:</label>
+                                    <input type="text" class="form-control" id="thingSpeakApiKey"
+                                        value="%THINGSPEAKAPIKEY%" placeholder="ThingSpeak API Key"
+                                        name="thingSpeakApiKey">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Save</button>
+                            </form>
                         </td>
                     </tr>
                 </tbody>
@@ -46,6 +66,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <!-- Confirm Modal Js -->
+    <script src="js/jquery.confirmModal.min.js"></script>
+    <script src="js/settings.js"></script>
 </body>
 
 </html>
