Add link to weather location ids to weather settings page.

--- a/data/weatherSettings.html
+++ b/data/weatherSettings.html
@@ -22,7 +22,7 @@
             <table class="table" style="background-color: white">
                 <thead class="thead-light">
                     <tr>
-                        <th>Weather</th>
+                        <th>Weather - <a href="http://bulk.openweathermap.org/sample/city.list.json.gz">Link to city list for location ids:</a></th>
                     </tr>
                 </thead>
                 <tbody>
