--- a/data/settings.html
+++ b/data/settings.html
@@ -58,6 +58,30 @@
             <table class="table" style="background-color: white">
                 <thead class="thead-light">
                     <tr>
+                        <th>Clock</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <form action="/updateClockSettings.html">
+                                <div class="form-group">
+                                    <label for="utcOffset">Offset from UTC in seconds</label>
+                                    <input type="number" class="form-control" id="utcOffset" value="%UTCOFFSET%"
+                                        placeholder="UTC offset" name="utcOffset">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Save</button>
+                            </form>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="table-responsive-md">
+            <table class="table" style="background-color: white">
+                <thead class="thead-light">
+                    <tr>
                         <th>Timings - enter values in seconds</th>
                     </tr>
                 </thead>
@@ -97,7 +121,7 @@
             <table class="table" style="background-color: white">
                 <thead class="thead-light">
                     <tr>
-                        <th>General</th>
+                        <th>Reset</th>
                     </tr>
                 </thead>
                 <tbody>
