Add (ignoreed) copy of settings.json so settings are not wiped on file system upload. Move display MQTT topic into settings.

--- a/data/mqttSettings.html
+++ b/data/mqttSettings.html
@@ -67,6 +67,10 @@
                                     <label for="mqttPressureTopic">Pressure topic:</label>
                                     <input type="text" class="form-control" id="mqttPressureTopic" value="%MQTTPRESSURETOPIC%" placeholder="Pressure topic" name="mqttPressureTopic">
                                 </div>
+                                <div class="form-group">
+                                    <label for="mqttDisplayTopic">Display topic:</label>
+                                    <input type="text" class="form-control" id="mqttDisplayTopic" value="%MQTTDISPLAYTOPIC%" placeholder="Display topic" name="mqttDisplayTopic">
+                                </div>
                                 <button type="submit" class="btn btn-primary">Save</button>
                             </form>
                         </td>
